LINK =
include $(top_srcdir)/build/build.mk

include $(top_srcdir)/build/xbuild.include


SUBDIRS = \
		FSpot.Bling \
		FSpot.Cms \
		FSpot.Utils \
		FSpot.Core \
		FSpot.JobScheduler \
		FSpot.Query \
		FSpot.Gui \
		FSpot.Platform

RESOURCES = \
		FSpot.Imaging.UnitTest/TestData/taglib-sample.xmp \
		FSpot.Imaging.UnitTest/TestData/taglib-sample-broken.xmp \
		FSpot.Imaging.UnitTest/TestData/taglib-sample.jpg \
		FSpot.Imaging.UnitTest/TestData/taglib-sample-broken.jpg
